fixed clipping

--- a/css/style.css
+++ b/css/style.css
@@ -183,10 +183,6 @@ md-bottom-sheet {
   overflow: scroll;
 }
 
-.projectRow {
-  height: 80vh;
-}
-
 #aboutCard {
   background-color: rgba(255, 255, 255, .8);
   position:absolute;
